--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-requests~=2.31.0
-python-dotenv~=1.0.0
-pandas~=2.0.3
-evmdasm~=0.1.10
+requests
+python-dotenv
+pandas
+evmdasm
+tqdm
+tinydb
+selenium
+webdriver_manager
+beautifulsoup4
+lxml
+json-lines
+undetected-chromedriver
