--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,15 +4,14 @@
   "editor.defaultFormatter": "ms-python.black-formatter",
   "editor.formatOnSave": true,
   "files.autoSave": "onFocusChange",
-  "[dockerfile]": {
-    "editor.defaultFormatter": "ms-azuretools.vscode-docker"
-  },
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.rulers": [79]
   },
+  "black-formatter.args": ["--line-length 80"],
   "sqltools.useNodeRuntime": true,
   "sqltools.connections": [
     {
