--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,14 +15,9 @@
       "database": "${workspaceFolder:EVM project}/contStore.db"
     }
   ],
-  // "black-formatter.args": ["--line-length 80"],
-  // "sqltools.useNodeRuntime": true,
-  // "sqltools.connections": [
-  //   {
-  //     "previewLimit": 50,
-  //     "driver": "SQLite",
-  //     "name": "contracts",
-  //     "database": "${workspaceFolder:EVM project}/contStore.db"
-  //   }
-  // ]
+  "black-formatter.args": ["--line-length 80"],
+  "files.exclude": {
+    "**/*__pycache__": true,
+    "src/chromedriver.exe": true,
+  }
 }
