getting it working for linux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
   // "black-formatter.args": ["--line-length 80"],
   "files.exclude": {
     "**/*__pycache__": true,
-    "src/chromedriver.exe": true,
+    "src/chromedriver*": true,
     ".venv": true,
   }
 }
